# kml-to-obj

./: .gitignore  README.md  pyproject.toml
samples/: example.kml  simple_hierarchy_4cubos.kml  with_hole.kml
src/kml_to_fbx/: __init__.py  blender_obj_to_fbx.py  cli.py  fbx_writer.py  fbxsdk_writer.py  geo.py  kml_parser.py  mesh_builder.py  models.py  obj_writer.py
src/kml_to_obj/: cli.py  geo.py  mesh_builder.py
tests/: test_cli_output_modes_unittest.py  test_edge_cases_unittest.py  test_fbx_writer.py  test_kml_parser.py  test_polygon_holes.py
tools/fbxsdk/: build_fbxsdk_exporter_windows.bat
tools/fbxsdk/src/: fbxsdk_exporter.cpp
