[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kml-to-fbx"
version = "0.1.0"
description = "Convert KML shapes to FBX preserving names and per-shape materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kml2fbx = "kml_to_fbx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
